Test de imagenes completada en primera fase

--- a/index.html
+++ b/index.html
@@ -9,36 +9,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        .instagram-fab {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #E4405F;
-            color: white;
-            font-size: 24px;
-            padding: 15px;
-            border-radius: 50%;
-            text-align: center;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-        }
-        .instagram-fab:hover {
-            background-color: #bc2a8d;
-        }
-    </style>
-</head>
-<body>
-
-<a href="https://instagram.com" target="_blank" class="instagram-fab">
-    <i class="fab fa-instagram"></i>
-</a>
-
-</body>
-</html>
-Este botón flotante (FAB) de Instagram aparecerá en la esquina inferior derecha y dirigirá a los usuarios a Instagram. También puedes ajustar los colores y el tamaño para que se adapte a tu diseño. ¡Déjame saber si necesitas más personalización! 🚀
-
-1github.com
-
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/formats.css">
 </head>
@@ -74,9 +44,9 @@ Este botón flotante (FAB) de Instagram aparecerá en la esquina inferior derech
 
   <section class="gallery" id="gallery">
     <h2>Galería</h2>
-    <img src="https://via.placeholder.com/260x180?text=Fiesta+1" alt="Fiesta 1" />
-    <img src="https://via.placeholder.com/260x180?text=Fiesta+2" alt="Fiesta 2" />
-    <img src="https://via.placeholder.com/260x180?text=Fiesta+3" alt="Fiesta 3" />
+    <img src="/img/1.png" alt="Fiesta 1" />
+    <img src="/img/2.png" alt="Fiesta 2" />
+    <img src="/img/3.png" alt="Fiesta 3" />
   </section>
  <h2>Testimonios</h2>
   <section class="testimonios" id="testimonios">
