Subida de actualizacion

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
   <section id="about">
     <h2>Sobre mí</h2>
-    <p style="max-width: 600px; margin: auto; text-align: center;">Soy Lazuli, una payasita carismática con pasión por alegrar los corazones infantiles. Con colores vibrantes, shows únicos y mucho amor por los niños.</p>
+    <p style="max-width: 600px; margin: auto; text-align: justify;color:white"> ¡Hola! Soy <strong>Lazuli</strong>, psicóloga de profesión y payasita de corazón. ❤️<br><br>
+    Combino mi trabajo como <strong>psicóloga</strong> con la magia de la animación, creando experiencias llenas de alegría, empatía y mucho color. Gracias a mi formación, comprendo profundamente las emociones y etapas del desarrollo de los niños, lo que me permite brindar un entretenimiento sano, respetuoso y muy divertido.<br><br>
+    Ser payasita no es solo un show, es mi forma de conectar con las familias y sembrar recuerdos felices en cada celebración. 🎈🎉</p>
   </section>
 
   <section class="services" id="services">
@@ -37,17 +39,22 @@
     <ul>
       <li>🎨 Pintacaritas</li>
       <li>🎈 Globoflexia</li>
-      <li>🎭 Show de Magia</li>
+      <li>🕺 Coreografias</li>
       <li>🎉 Animación de Cumpleaños</li>
+      <li>💥 Mucho Más</li>
     </ul>
   </section>
 
-  <section class="gallery" id="gallery">
-    <h2>Galería</h2>
-    <img src="/img/1.png" alt="Fiesta 1" />
-    <img src="/img/2.png" alt="Fiesta 2" />
-    <img src="/img/3.png" alt="Fiesta 3" />
-  </section>
+<h2>Galería</h2>
+<section>
+<div class="galeria" id="galeria">
+    <img src="" alt="img1">
+    <img src="" alt="img2">
+    <img src="" alt="img3">
+  </div>
+</section>
+
+
  <h2>Testimonios</h2>
   <section class="testimonios" id="testimonios">
     <div class="testimonios-carousel" id="carousel">
@@ -74,4 +81,5 @@
   <script src="js/contact.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/testimonies.js"></script>
+  <script src="js/gallery.js"></script>
 </html>
